--- a/_estilos/layout.css
+++ b/_estilos/layout.css
@@ -15,10 +15,11 @@ CINZA BEM CLARO: #F7F7F7
 }
 
 header {
+    position: relative;
     background-image: linear-gradient(rgba(0,0,0,0.8), rgba(0,0,0,0)), url(../_imagens/secao08-background-capa.jpg);
     background-size: cover;
     background-position: center center;
-
+    
     width: 100%;
     height: 100vh;
 
@@ -96,3 +97,14 @@ nav ion-icon#icone-user:hover {
     cursor: pointer;
 }
 
+header div#chamada {
+    position: absolute;
+    width: 100%;
+    height: 300px;
+    text-align: center;
+
+    top: 50%;
+    left: 50%;
+
+    transform: translate(-50%, -50%);
+}
