desenvolvimento da seção Domingo Perfeito

--- a/_estilos/layout.css
+++ b/_estilos/layout.css
@@ -108,3 +108,55 @@ header div#chamada {
 
     transform: translate(-50%, -50%);
 }
+
+/*-----------------------------*/
+/* SEÇÃO - DOMINGO PERFEITO    */
+/*-----------------------------*/
+
+section#domingo-perfeito {
+    width: 100%;
+    padding: 40px 0 80px;
+
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-around;
+ 
+
+}
+
+div#domingo-perfeito-esquerda, div#domingo-perfeito-direita {
+    position: relative;
+    width: 15%;
+
+    background-color: #F2b705;
+}
+
+div#domingo-perfeito-centro {
+    width: 65%;
+    
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+div#pontos-chaves-mestre {
+    width: 100%;
+    margin-top: 40px;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    
+}
+
+div.pontos-chaves {
+    text-align: center;
+    width: 25%;
+}
+
+section#domingo-perfeito div.pontos-chaves ion-icon {
+    width: 75px;
+    height: 75px;
+    color: #f03733;
+}
